Compositing node editor is empty, no nodes can be added #50656

Closed
opened 2017-02-11 22:58:10 +01:00 by Philip Holzmann · 4 comments

System Information
Windows 7 64 bit

Blender Version
Broken: (2.78 3ede515), also 2.78b

Short description of error
Compositing node editor is empty, no nodes can be added.
All options in "Add" menu are grayed out.

Exact steps for others to reproduce the error
With file:
a.blend
No nodes can be added. (Try Shift-A / Add menu).
Workaround: Switch node editor to material nodes, then back to composite nodes.

Without file:
Open Blender with default cube scene.
Split view, set to Node Editor. Switch to compositing nodes, tick and then untick "Use Nodes". Save the file.
Close Blender.
Open the saved file.
Switch to the screen layout preset "Compositing".

  • same as above.

**System Information** Windows 7 64 bit **Blender Version** Broken: (2.78 3ede515), also 2.78b **Short description of error** Compositing node editor is empty, no nodes can be added. All options in "Add" menu are grayed out. **Exact steps for others to reproduce the error** **With file:** [a.blend](https://archive.blender.org/developer/F483559/a.blend) No nodes can be added. (Try Shift-A / Add menu). Workaround: Switch node editor to material nodes, then back to composite nodes. **Without file:** Open Blender with default cube scene. Split view, set to Node Editor. Switch to compositing nodes, tick and then untick "Use Nodes". Save the file. Close Blender. Open the saved file. Switch to the screen layout preset "Compositing". - > same as above.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Foaly

Added subscriber: @Foaly

This issue was referenced by 9eb647f1c8

This issue was referenced by 9eb647f1c8d8d7ea7da8f7dff7c19a2008afe26c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50656
No description provided.