Fix T50656: Compositing node editor is empty, no nodes can be added